<resources>
    <string name="app_name">My Diary</string>
    <string name="emailme">Enter Email</string>
    <string name="registerme">Need an Account? SignUp</string>
    <string name="forgotpas">Forgot Password?</string>
    <string name="pashere">Enter Password</string>
    <string name="loginme">SignIn</string>
    <string name="remhere">Remember Me?</string>
    <string name="firstlast">First and Last Name</string>
    <string name="clientid">Id/Passport Number</string>
    <string name="preferredpass">Preferred Password</string>
    <string name="occupation">I like doing</string>
    <string name="phoneno">My Phone Number is</string>
    <string name="Register">Sign Up</string>
    <string name="entertitle">Note Title</string>
    <string name="TypeYourNote">Type Your Note Here</string>
    <string name="saveb">Save</string>
    <string name="discardb">Discard</string>
    <string name="UpdateSuccess">Note Update Successfully</string>
    <string name="failedUpdate">Note Failed to Update</string>
    <string name="add">New Entry</string>
    <string name="edit">Edit Entry</string>
    <string name="signUp">SignUp</string>
    <string name="SignIn">SignIn</string>
    <string name="addnote">Add Note</string>
    <string name="addmemo">Tap </string>
    <string name="newjournal">to add a Journal Entry</string>
    <string name="dlt">Delete Note?</string>
    <string name="yesans">Yes</string>
    <string name="noans">No</string>
    <string name="logOut">Log Out</string>
    <string name="signupgoogle">Google SignUp</string>
    <string name="onlineData">Online Data</string>
    <string name="offlinedata">Offline Data</string>
    <string name="delete">delete note</string>
    <string name="editnote">Edit Note</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
</resources>
