...

            <TextView
                android:id="@+id/notedes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:drawableRight="@drawable/editb"
                android:text="@string/addmemo"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/notedesc"
                android:layout_width="wrap_content"
...
        </LinearLayout>


    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_notes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
...
