...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/notesTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:hint="@string/entertitle"
            android:inputType="textAutoCorrect" />

...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/myNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:hint="@string/TypeYourNote"
            android:inputType="textMultiLine"
            android:textSize="14sp" />
...
